<resources>
    <string name="user_guest">User Guest</string>
    <string name="activity_title_main">KdUINO Control</string>
    <string name="activity_title_user">Register User</string>
    <string name="activity_title_make">Define a KdUINO buoy</string>
    <string name="activity_title_bluetooth_connected">Connected to:</string>
    <string name="dialog_kd_r2_title">K2 and R2 stored values</string>
    <string name="context_menu_connection_buoy">Remove Connection with Device</string>
    <string name="context_menu_delete_buoy">Delete Buoy</string>
    <string name="positive_dialog">Yes</string>
    <string name="negative_dialog">No</string>
    <string name="ok_dialog">Ok</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="login_dialog">Login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_home_configuration">Configuration</string>
    <string name="menu_home_measurement">Measurements</string>
    <string name="main_menu_connect_to_device">Connect to Device</string>
    <string name="main_menu_show_data">Display Measurements</string>
    <string name="main_menu_configuration">Configuration</string>
    <string name="search_node">Search KdUINO</string>
    <string name="search_node_device">Search Bluetooth Devices</string>
    <string name="activate_bluetooth">Activate Bluetooth</string>
    <string name="disconnect_bluetooth">Disconnect Bluetooth Device</string>
    <string name="custom_enter_time_title">Enter measure elapsed interval in miliseconds</string>
    <string name="custom_enter_time_content">Enter time elapsed</string>
    <string name="custom_enter_time_hint">400</string>
    <string name="custom_enter_time_prefill">200</string>
    <string name="action_send_data_to_server">SEND MEASUREMENT TO SERVER</string>
    <string name="action_send_data">SEND DATA</string>
    <string name="action_delete_data">DELETE SAVE DATA</string>
    <string name="action_retrieve_data">DISPLAY SAVE DATA</string>
    <string name="action_program_time">PROGRAM TIME</string>
    <string name="action_read_time">READ TIME</string>
    <string name="action_start_data">START</string>
    <string name="action_end_data">END</string>
    <string name="action_test_data">TEST DATA</string>
    <string name="action_calibration_sensors">CALIBRATION</string>
    <string name="action_measurement_data">SET</string>
    <string name="action_sampletime_data">READ</string>
    <string name="action_test_sensors">TAKE ONE SAMPLE</string>
    <string name="action_set_sample_time">SAMPLE TIME</string>
    <string name="action_get_sample_time">GET SAMPLE TIME</string>
    <string name="action_set_measurement_time">MEASUREMENT TIME</string>
    <string name="action_get_measurement_time">GET MEASUREMENT TIME</string>
    <string name="fragment_user_password_title">Password:</string>
    <string name="fragment_user_name_title">Name:</string>
    <string name="fragment_user_nickname_title">Nickname:</string>
    <string name="fragment_user_country_title">Country:</string>
    <string name="fragment_user_email_title">Email:</string>
    <string name="fragment_user_map_title">Download offline MAP File</string>
    <string name="tab_make_kduino">Make a KdUINO</string>
    <string name="tab_kduino">KdUINO Control</string>
    <string name="tab_sensors">Sensors</string>
    <string name="tab_data">Data</string>
    <string name="tab_position">KdUINO Position</string>
    <string name="tab_control">Control</string>
    <string name="progress_dialog">Sending command</string>
    <string name="please_wait">Waiting command</string>
    <string name="progress_retrieving_title">Downloading data</string>
    <string name="progress_retrieving_help">Downloading all data from buoy</string>
    <string name="progress_calculating_kd_title">Compute Kd values</string>
    <string name="progress_calculating_kd_help">Calculate kd using linear regresion</string>
    <string name="fragment_title_create_device">Define KdUINO model</string>
    <string name="fragment_title_connect_device">Define KdUINO model</string>
    <string name="fragment_title_main">KdUINO Application Control</string>
    <string name="fragment_title_command_device">KdUINO Command control</string>
    <string name="fragment_title_show_transparency_data">Observation Maps</string>
    <string name="dialog_sensor_adjustment_title">Sensor calibrations</string>
    <string name="info_command_error_0">Configuration file open correctly</string>
    <string name="info_command_error_1">Cannot open SD card</string>
    <string name="info_command_error_2">Cannot open the data file</string>
    <string name="info_command_error_3">Cannot open the configuration file</string>
    <string name="info_command_error_4">Cannot read the real number of measurements</string>
    <string name="dialog_recover_title">Recover password</string>
    <string name="dialog_recover_email_sended">Email send</string>
    <string name="dialog_recover_email_error">Error sending recovery email.</string>
    <string name="dialog_login_title">Server authentication</string>
    <string name="dialog_login_message">You must authenticate to send your data to the server.</string>
    <string name="dialog_set_sample_deep_title">Set Sensor Deep</string>
    <string name="dialog_set_sample_deep_message">Set sensor deep in meters.</string>
    <string name="dialog_search_gps_title">Enable GPS</string>
    <string name="dialog_search_gps_message">Enable either GPS or any other location service to find current location.  Click OK to go to location services settings to let you do so.</string>
    <string name="dialog_wait_title">Please wait</string>
    <string name="dialog_wait_message">Waiting info from buoy. Depending of the measurement time the buoy needs time to process the info command.</string>
    <string name="dialog_search_blueetooth_title">Please wait</string>
    <string name="dialog_search_blueetooth_message">The application is doing a bluetooth discovery to find KdUINOs buoys.</string>
    <string name="dialog_set_sample_time_title">Set Sample Time</string>
    <string name="dialog_set_sample_time_message">Set the sample time in minutes</string>
    <string name="dialog_set_measurement_time_title">Set Measurement Time</string>
    <string name="dialog_set_measurement_time_message">Set the measurement time in seconds</string>
    <string name="dialog_delete_title">Confirm Delete!</string>
    <string name="dialog_delete_message">Warning. All the data store in the kduino buoy will erase.</string>
    <string name="alert_associated_kduino_title">Associated kduino Model with device</string>
    <string name="alert_associated_kduino_message">Do you want to bind the mac address device with the selected kduino model?</string>
    <string name="bluetooth_data_delete">Data has been deleted</string>
    <string name="bluetooth_data_cant_delete">Can\'t delete data</string>
    <string name="bluetooth_data_has_been_read">Data has been read</string>
    <string name="bluetooth_data_cant_read_data">Can\'t read data</string>
    <string name="bluetooth_data_time_saved">Time has been saved in Kduino</string>
    <string name="bluetooth_data_cant_time_saved">Can\'t save time in Kduino</string>
    <string name="bluetooth_data_start_kduino">Kduino is starting</string>
    <string name="bluetooth_data_cant_start_kduino">Kduino can\'t start</string>
    <string name="bluetooth_data_sensor_cant_tested">Sensors can\'t be tested</string>
    <string name="bluetooth_data_stop_kduino">Kduino has stopped</string>
    <string name="bluetooth_data_cant_stop_kduino">Kduino can\'t stop</string>
    <string name="bluetooth_data_not_found">No measurement found in the kduino memory.</string>
    <string name="bluetooth_data_time_has_been_read">Time has been read</string>
    <string name="bluetooth_data_time_cant_read">Time can\'t be read</string>
    <string name="bluetooth_not_supported">Bluetooth: not supported</string>
    <string name="bluetooth_cant_connect">Can\'t connect to Bluettoth device</string>
    <string name="bluetooth_not_turn_on_bluetooth">Turn on your Bluetooth, please</string>
    <string name="bluetooth_data_has_been_calibrated"> Kduino has been calibrated</string>
    <string name="bluetooth_data_cant_calibrated">Kduino has not been calibrated</string>
    <string name="bluetooth_search_device_title">Search KdUINO Device</string>
    <string name="internet_alert_title">Internet Connection</string>
    <string name="internet_alert_message">For this functionality you need stay connected to internet.</string>
    <string name="internet_download_title">Download Data</string>
    <string name="internet_download_message">Connecting to server to download the Observation data.</string>
    <string-array name="intro_titles">
        <item>What is kduino?</item>
        <item>What is water transparency?</item>
        <item>Why is it important?</item>
        <item>What we are measuring?</item>
        <item>Be a citizen</item>
    </string-array>
    <string name="nav_first_connect_kduino_title">Connect Buoy</string>
    <string name="nav_section_kduino_title"><b>KDUINO Buoy</b></string>
    <string name="nav_section_data_kduino_title"><b>Data Buoy</b></string>
    <string name="nav_data_kduino_title">Observation Maps</string>
    <string name="nav_video_help_title">How To make a Kduino</string>
    <string name="nav_section_about_title"><b>About KdUINO</b></string>
    <string name="nav_about_title">About KdUINO Project</string>
    <string name="nav_tutorial_title">Kduino App Tutorial </string>
    <string name="sensor_definition_title">Sensor</string>
    <string name="sensor_calibration">Calibration</string>
    <string name="sensor_definition_id">ID</string>
    <string name="enternologin">Enter</string>
    <string name="sign_in">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">¿How it works?</string>
    <string name="sign_up">Sign up</string>
    <string name="fragment_set_time_sensors_title"><b>Sensors</b></string>
    <string name="fragment_set_time_clock_time"><b>Clock Time</b></string>
    <string name="fragment_set_time_settings"><b>Settings</b></string>
    <string name="fragment_set_data_measuring"><b>Measurements</b></string>
    <string name="fragment_data_data"><b>Data</b></string>
</resources>