<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.bega.kduino.fragments.bluetooth.TimeCommandsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/fragment_set_time_clock_time"
            />
        <View android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >

        </View>


        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="0"
        android:orientation="horizontal">




        <Button
            style="@style/BaseFontBold"
            android:id="@+id/btnMeasurmentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/kduino_button"
            android:text="@string/action_measurement_data"
            android:textColor="@android:color/white"
            android:onClick="clickView"
            android:layout_weight="1"
            android:layout_marginRight="2dp" />

        <Button
            style="@style/BaseFontBold"
            android:id="@+id/btnSampleTime"
            android:layout_height="wrap_content"
            android:background="@drawable/kduino_button"
            android:text="@string/action_sampletime_data"
            android:textColor="@android:color/white"
            android:onClick="clickView"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_marginLeft="2dp" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/fragment_set_time_sensors_title"
                />
            <View android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                >

            </View>


        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnManagerCalibrationSensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/kduino_button"
            android:text="@string/action_calibration_sensors"
            android:textColor="@android:color/white"
            android:onClick="clickView"
            android:layout_weight="1"
            style="@style/BaseFontBold" />



</LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_set_time_settings"
                android:layout_margin="8dp" />
            <View android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="4dp">

            </View>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                style="@style/BaseFontBold"
                android:id="@+id/btnManagerSetInterval"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/kduino_button"
                android:text="@string/action_set_sample_time"
                android:textColor="@android:color/white"
                android:onClick="clickView"
                android:layout_weight="1"
                android:layout_marginRight="2dp" />

            <Button
                style="@style/BaseFontBold"
                android:id="@+id/btnManagerSetMeasurement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/kduino_button"
                android:text="@string/action_set_measurement_time"
                android:textColor="@android:color/white"
                android:onClick="clickView"
                android:layout_weight="1"
                android:layout_marginLeft="2dp" />

        </LinearLayout>


    </LinearLayout>




</FrameLayout>
