<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.bega.kduino.fragments.LoginDialogFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rlRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"

        >

        <LinearLayout
            android:id="@+id/llMain"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            >

            <EditText
                android:id="@+id/login_dialog_etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/login_dialog_etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                />

            <Button
                android:id="@+id/login_dialog_btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/kduino_button"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"

                android:layout_marginTop="5dp"
                style="@style/BaseFontBold"
                />

            <Button
                android:id="@+id/login_dialog_btn_recover_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/forgot_password"
                android:layout_marginTop="5dp"
                style="@style/TitleShadow"

                />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llMain"
            android:layout_marginBottom="10dp"
            android:src="@drawable/kduino_marker"
            android:layout_centerHorizontal="true"
            />

        <LinearLayout
            android:id="@+id/llSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            >

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button_states"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                style="@style/BaseFontBold"
                android:onClick="clickView"
                android:visibility="gone"
                />

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>
