<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
   android:layout_margin="8dp"
    android:padding="4dp"
    android:weightSum="2"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_definition_title"
                android:id="@+id/sensor_definition_title"

                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_definition_id"
                android:id="@+id/sensor_test_id_value"
                android:gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_calibration"
                android:id="@+id/sensor_test_adjustment_title"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center_horizontal" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/sensor_test_adjustment_value"
                android:max="20"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:gravity="center_horizontal" />


        </LinearLayout>








</LinearLayout>
